--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1"
   }
 }
