--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build": "webpack --config webpack.prod.js",
     "demo": "webpack --config webpack.dev.js",
     "deploy": "gh-pages -d demo",
-    "eslint": "eslint . && cd server && eslint .",
+    "eslint": "eslint .",
     "lint": "npm run eslint --fix",
     "live": "cross-env BABEL_ENV=production npm run start",
     "predeploy": "webpack --config webpack.dev.js --mode production",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "start": "webpack-dev-server --config webpack.dev.js --hot --open",
+    "start": "webpack serve --config webpack.dev.js --hot --open chrome",
     "test": "jest",
     "watch": "jest --watch"
   },
@@ -35,45 +35,45 @@
   },
   "homepage": "https://github.com/MenSeb/react-boilerplate#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.7.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/react-hooks": "^3.2.1",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/react-hooks": "^3.4.2",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.1",
     "babel-plugin-jsx-remove-data-test-id": "^2.1.3",
-    "cross-env": "^7.0.0",
-    "css-loader": "^3.4.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.13.1",
-    "eslint-plugin-jest-dom": "^2.0.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-testing-library": "^2.0.0",
-    "gh-pages": "^2.1.1",
-    "jest": "^26.0.1",
-    "node-sass": "^4.13.0",
-    "prettier": "^2.0.5",
-    "react-test-renderer": "^16.12.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.1.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-merge": "^4.2.2"
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest-dom": "^3.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.10.1",
+    "gh-pages": "^3.1.0",
+    "jest": "^26.6.3",
+    "node-sass": "^5.0.0",
+    "prettier": "^2.2.0",
+    "react-test-renderer": "^17.0.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.7.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.9.6",
+    "@babel/runtime": "^7.12.5",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1"
   }
