--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "url": "https://github.com/MenSeb/react-boilerplate/issues"
   },
   "homepage": "https://github.com/MenSeb/react-boilerplate#readme",
+  "dependencies": {
+    "@babel/runtime": "^7.12.5"
+  },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
@@ -61,6 +64,9 @@
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
@@ -69,12 +75,9 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.12.5",
+  "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.4.1"
+    "react-dom": "^17.0.1"
   }
 }
