--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "@menseb/react-boilerplate",
   "version": "1.0.0",
   "description": "React boilerplate",
-  "main": "index.js",
-  "module": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
+    "build": "rm -rf ./dist && webpack --config webpack.prod.js",
+    "coverage": "jest --coverage && coveralls < coverage/lcov.info",
     "demo": "webpack --config webpack.dev.js",
     "deploy": "gh-pages -d demo",
     "eslint": "eslint .",
     "lint": "npm run eslint --fix",
-    "live": "cross-env BABEL_ENV=production npm run start",
     "predeploy": "webpack --config webpack.dev.js --mode production",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "start": "webpack serve --config webpack.dev.js --hot --open chrome",
+    "start": "webpack serve --config webpack.dev.js --hot --open",
     "test": "jest",
     "watch": "jest --watch"
   },
@@ -34,22 +34,17 @@
     "url": "https://github.com/MenSeb/react-boilerplate/issues"
   },
   "homepage": "https://github.com/MenSeb/react-boilerplate#readme",
-  "dependencies": {
-    "@babel/runtime": "^7.12.5"
-  },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
-    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/react-hooks": "^3.4.2",
+    "@testing-library/user-event": "^12.6.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
-    "babel-plugin-jsx-remove-data-test-id": "^2.1.3",
-    "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
