--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "rm -rf ./dist && webpack --config webpack.prod.js",
-    "coverage": "jest --coverage && coveralls < coverage/lcov.info",
+    "coverage": "jest --coverage",
     "demo": "webpack --config webpack.dev.js",
     "deploy": "gh-pages -d demo",
     "eslint": "eslint .",
