--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,20 @@
 name: build
 
+# Should look for some tools here
+# https://github.com/fkirc/skip-duplicate-actions
+# Might be useful to skip previous commit actions
+# Might be useful to skip actions for specific files (.md)
+# paths-ignore isn't good enough to compare commits
+
 on:
   push:
     branches:
       - master
-    paths-ignore:
-      - '**/*.md'
+    #paths-ignore:
+    #  - '**/*.md'
   pull_request:
-    paths-ignore:
-      - '**/*.md'
+    #paths-ignore:
+    #  - '**/*.md'
 
 jobs:
   build:
