chore(github): update actions with branches (#12)
* add branches to on push action

* test file update with build action

* update md file to test github action

* update git action to ignore md files

* update md file to test github action

* revert changes and add comments to improve github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,20 @@
 name: build
 
+# Should look for some tools here
+# https://github.com/fkirc/skip-duplicate-actions
+# Might be useful to skip previous commit actions
+# Might be useful to skip actions for specific files (.md)
+# paths-ignore isn't good enough to compare commits
+
 on:
   push:
-    paths-ignore:
-      - '**.md'
+    branches:
+      - master
+    #paths-ignore:
+    #  - '**/*.md'
   pull_request:
-    paths-ignore:
-      - '**.md'
+    #paths-ignore:
+    #  - '**/*.md'
 
 jobs:
   build:
