--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,7 @@
 {
     "extends": ["config:base"],
+    "assignees": "MenSeb",
+    "reviewers": "MenSeb",
     "prHourlyLimit": 0,
     "prConcurrentLimit": 0,
     "packageRules": [
