--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
         "plugin:jsx-a11y/recommended",
         "plugin:prettier/recommended",
         "plugin:react/recommended",
-        "plugin:testing-library/recommended"
+        "plugin:testing-library/dom"
     ],
     "env": {
         "browser": true,
