--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "demo": "webpack --config webpack.dev.js",
     "deploy": "gh-pages -d demo",
     "eslint": "eslint .",
-    "lint": "npm run eslint --fix",
+    "lint": "npm run eslint -- --fix",
     "predeploy": "webpack --config webpack.dev.js --mode production",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
     "start": "webpack serve --config webpack.dev.js --hot --open",
