--- a/package.json
+++ b/package.json
@@ -1,79 +1,79 @@
 {
-  "name": "@menseb/react-boilerplate",
-  "version": "1.0.0",
-  "description": "React boilerplate",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "rm -rf ./dist && webpack --config webpack.prod.js",
-    "coverage": "jest --coverage",
-    "demo": "webpack --config webpack.dev.js",
-    "deploy": "gh-pages -d demo",
-    "eslint": "eslint .",
-    "lint": "npm run eslint --fix",
-    "predeploy": "webpack --config webpack.dev.js --mode production",
-    "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "start": "webpack serve --config webpack.dev.js --hot --open",
-    "test": "jest",
-    "watch": "jest --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MenSeb/react-boilerplate.git"
-  },
-  "keywords": [
-    "react",
-    "boilerplate"
-  ],
-  "author": "Sébastien Menard",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MenSeb/react-boilerplate/issues"
-  },
-  "homepage": "https://github.com/MenSeb/react-boilerplate#readme",
-  "devDependencies": {
-    "@babel/cli": "7.14.3",
-    "@babel/core": "7.14.3",
-    "@babel/preset-env": "7.14.4",
-    "@babel/preset-react": "7.13.13",
-    "@testing-library/jest-dom": "5.12.0",
-    "@testing-library/react": "11.2.7",
-    "@testing-library/react-hooks": "7.0.0",
-    "@testing-library/user-event": "13.1.9",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
-    "coveralls": "3.1.0",
-    "css-loader": "5.2.6",
-    "eslint": "7.27.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-jest": "24.3.6",
-    "eslint-plugin-jest-dom": "3.9.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-testing-library": "4.6.0",
-    "gh-pages": "3.2.0",
-    "jest": "26.6.3",
-    "node-sass": "6.0.0",
-    "prettier": "2.3.0",
-    "prop-types": "15.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-test-renderer": "17.0.2",
-    "sass-loader": "11.1.1",
-    "style-loader": "2.0.0",
-    "webpack": "5.38.1",
-    "webpack-cli": "4.7.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3"
-  },
-  "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  }
+    "name": "@menseb/react-boilerplate",
+    "version": "1.0.0",
+    "description": "React boilerplate",
+    "main": "dist/index.js",
+    "module": "dist/index.js",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "rm -rf ./dist && webpack --config webpack.prod.js",
+        "coverage": "jest --coverage",
+        "demo": "webpack --config webpack.dev.js",
+        "deploy": "gh-pages -d demo",
+        "eslint": "eslint .",
+        "lint": "npm run eslint -- --fix",
+        "predeploy": "webpack --config webpack.dev.js --mode production",
+        "prepublishOnly": "npm run lint && npm run test && npm run build",
+        "start": "webpack serve --config webpack.dev.js --hot --open",
+        "test": "jest",
+        "watch": "jest --watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/MenSeb/react-boilerplate.git"
+    },
+    "keywords": [
+        "react",
+        "boilerplate"
+    ],
+    "author": "Sébastien Menard",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/MenSeb/react-boilerplate/issues"
+    },
+    "homepage": "https://github.com/MenSeb/react-boilerplate#readme",
+    "devDependencies": {
+        "@babel/cli": "7.14.3",
+        "@babel/core": "7.14.3",
+        "@babel/preset-env": "7.14.4",
+        "@babel/preset-react": "7.13.13",
+        "@testing-library/jest-dom": "5.12.0",
+        "@testing-library/react": "11.2.7",
+        "@testing-library/react-hooks": "7.0.0",
+        "@testing-library/user-event": "13.1.9",
+        "babel-eslint": "10.1.0",
+        "babel-loader": "8.2.2",
+        "coveralls": "3.1.0",
+        "css-loader": "5.2.6",
+        "eslint": "7.27.0",
+        "eslint-config-prettier": "8.3.0",
+        "eslint-plugin-jest": "24.3.6",
+        "eslint-plugin-jest-dom": "3.9.0",
+        "eslint-plugin-jsx-a11y": "6.4.1",
+        "eslint-plugin-prettier": "3.4.0",
+        "eslint-plugin-react": "7.22.0",
+        "eslint-plugin-react-hooks": "4.2.0",
+        "eslint-plugin-testing-library": "4.6.0",
+        "gh-pages": "3.2.0",
+        "jest": "26.6.3",
+        "node-sass": "6.0.0",
+        "prettier": "2.3.0",
+        "prop-types": "15.7.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-test-renderer": "17.0.2",
+        "sass-loader": "11.1.1",
+        "style-loader": "2.0.0",
+        "webpack": "5.38.1",
+        "webpack-cli": "4.7.0",
+        "webpack-dev-server": "3.11.2",
+        "webpack-merge": "5.7.3"
+    },
+    "peerDependencies": {
+        "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    }
 }
