--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     ],
     "scripts": {
         "build": "rm -rf ./dist && webpack --config webpack.prod.js",
+        "clean": "rimraf dist node_modules",
         "coverage": "jest --coverage",
         "demo": "webpack --config webpack.dev.js",
         "deploy": "gh-pages -d demo",
