--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "lint": "npm run eslint -- --fix",
         "predeploy": "webpack --config webpack.dev.js --mode production",
         "prepublishOnly": "npm run lint && npm run test && npm run build",
+        "setup": "npm run clean && npm install && npm run build",
         "start": "webpack serve --config webpack.dev.js --hot --open",
         "test": "jest",
         "watch": "jest --watch"
