--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ],
     "scripts": {
         "build": "rimraf dist && webpack --config webpack.prod.js",
-        "clean": "rimraf dist node_modules",
+        "clean": "git clean -fXd -e !node_modules -e !node_modules/**/*",
         "coverage": "jest --coverage",
         "demo": "webpack --config webpack.dev.js",
         "deploy": "gh-pages -d demo",
