--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "devDependencies": {
         "@babel/cli": "7.14.3",
         "@babel/core": "7.14.3",
+        "@babel/plugin-transform-runtime": "^7.14.3",
         "@babel/preset-env": "7.14.4",
         "@babel/preset-react": "7.13.13",
+        "@babel/runtime": "^7.14.0",
         "@testing-library/jest-dom": "5.12.0",
         "@testing-library/react": "11.2.7",
         "@testing-library/react-hooks": "7.0.0",
