--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
+    "plugins": [
+        "@babel/transform-runtime"
+    ],
     "presets": [
         ["@babel/env", { "targets": { "node": "current" } }],
         "@babel/react"
