update babel config with plugin data-testid

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
+    "env": {
+        "production": {
+            "plugins": [
+                "babel-plugin-jsx-remove-data-test-id"
+            ]
+        }
+    },
     "plugins": [
         "@babel/transform-runtime"
     ],
