--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "babel-eslint": "10.1.0",
         "babel-loader": "8.2.2",
         "coveralls": "3.1.0",
+        "cross-env": "^7.0.3",
         "css-loader": "5.2.6",
         "eslint": "7.27.0",
         "eslint-config-prettier": "8.3.0",
