--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "deploy": "gh-pages -d demo",
         "eslint": "eslint .",
         "lint": "npm run eslint -- --fix",
+        "live": "cross-env BABEL_ENV=production npm run start",
         "predeploy": "webpack --config webpack.dev.js --mode production",
         "prepublishOnly": "npm run lint && npm run test && npm run build",
         "setup": "npm run clean && npm install && npm run build",
