--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "deploy": "gh-pages -d demo",
         "eslint": "eslint .",
         "lint": "npm run eslint -- --fix",
+        "live": "cross-env BABEL_ENV=production npm run start",
         "predeploy": "webpack --config webpack.dev.js --mode production",
         "prepublishOnly": "npm run lint && npm run test && npm run build",
         "setup": "npm run clean && npm install && npm run build",
@@ -50,6 +51,7 @@
         "babel-eslint": "10.1.0",
         "babel-loader": "8.2.2",
         "coveralls": "3.1.0",
+        "cross-env": "^7.0.3",
         "css-loader": "5.2.6",
         "eslint": "7.27.0",
         "eslint-config-prettier": "8.3.0",
