--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@testing-library/user-event": "13.1.9",
         "babel-eslint": "10.1.0",
         "babel-loader": "8.2.2",
+        "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
         "coveralls": "3.1.0",
         "cross-env": "^7.0.3",
         "css-loader": "5.2.6",
