--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "live": "cross-env BABEL_ENV=production npm run start",
         "predeploy": "webpack --config webpack.dev.js --mode production",
         "prepublishOnly": "npm run lint && npm run test && npm run build",
+        "reset": "git clean -fXd",
         "setup": "npm run clean && npm install && npm run build",
         "start": "webpack serve --config webpack.dev.js --hot --open",
         "test": "jest",
