--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
         "@babel/preset-env": "7.14.4",
         "@babel/preset-react": "7.13.13",
         "@babel/runtime": "7.14.0",
+        "@commitlint/cli": "^12.1.4",
+        "@commitlint/config-conventional": "^12.1.4",
+        "@commitlint/prompt-cli": "^12.1.4",
         "@testing-library/jest-dom": "5.12.0",
         "@testing-library/react": "11.2.7",
         "@testing-library/react-hooks": "7.0.0",
