--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "coveralls": "3.1.0",
         "cross-env": "7.0.3",
         "css-loader": "5.2.6",
+        "cz-conventional-changelog": "^3.2.0",
         "eslint": "7.27.0",
         "eslint-config-prettier": "8.3.0",
         "eslint-plugin-jest": "24.3.6",
@@ -89,5 +90,10 @@
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
