--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@menseb/react-boilerplate",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "description": "React boilerplate",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -10,6 +10,7 @@
     "scripts": {
         "build": "rimraf dist && webpack --config webpack.prod.js",
         "clean": "git clean -fXd -e !node_modules -e !node_modules/**/*",
+        "commit": "cz",
         "coverage": "jest --coverage",
         "demo": "webpack --config webpack.dev.js",
         "deploy": "gh-pages -d demo",
@@ -18,6 +19,7 @@
         "live": "cross-env BABEL_ENV=production npm run start",
         "predeploy": "webpack --config webpack.dev.js --mode production",
         "prepublishOnly": "npm run lint && npm run test && npm run build",
+        "release": "standard-version",
         "reset": "git clean -fXd",
         "setup": "npm run clean && npm install && npm run build",
         "start": "webpack serve --config webpack.dev.js --hot --open",
@@ -45,6 +47,9 @@
         "@babel/preset-env": "7.14.4",
         "@babel/preset-react": "7.13.13",
         "@babel/runtime": "7.14.0",
+        "@commitlint/cli": "^12.1.4",
+        "@commitlint/config-conventional": "^12.1.4",
+        "@commitlint/prompt-cli": "^12.1.4",
         "@testing-library/jest-dom": "5.12.0",
         "@testing-library/react": "11.2.7",
         "@testing-library/react-hooks": "7.0.0",
@@ -52,9 +57,11 @@
         "babel-eslint": "10.1.0",
         "babel-loader": "8.2.2",
         "babel-plugin-jsx-remove-data-test-id": "3.0.0",
+        "commitizen": "^4.2.4",
         "coveralls": "3.1.0",
         "cross-env": "7.0.3",
         "css-loader": "5.2.6",
+        "cz-conventional-changelog": "^3.2.0",
         "eslint": "7.27.0",
         "eslint-config-prettier": "8.3.0",
         "eslint-plugin-jest": "24.3.6",
@@ -74,6 +81,7 @@
         "react-test-renderer": "17.0.2",
         "rimraf": "3.0.2",
         "sass-loader": "12.0.0",
+        "standard-version": "^9.3.0",
         "style-loader": "2.0.0",
         "webpack": "5.38.1",
         "webpack-cli": "4.7.0",
@@ -84,5 +92,10 @@
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
