--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
     "extends": ["config:base"],
     "prHourlyLimit": 0,
     "prConcurrentLimit": 0,
+    "semanticCommits": "enabled",
     "schedule": [
         "after 10pm every weekday",
         "before 5am every weekday"
