chore(esmodules): enable ES modules in NodeJS
Add new field type with value module to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "React boilerplate",
     "main": "dist/index.js",
     "module": "dist/index.js",
+    "type": "module",
     "files": [
         "dist"
     ],
