--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
         "node": true
     },
     "noInlineConfig": false,
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module",
