--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "devDependencies": {
         "@babel/cli": "7.16.8",
         "@babel/core": "7.16.7",
+        "@babel/eslint-parser": "^7.16.5",
         "@babel/plugin-transform-runtime": "7.16.8",
         "@babel/preset-env": "7.16.8",
         "@babel/preset-react": "7.16.7",
@@ -55,7 +56,6 @@
         "@testing-library/react": "12.1.2",
         "@testing-library/react-hooks": "7.0.2",
         "@testing-library/user-event": "13.5.0",
-        "babel-eslint": "10.1.0",
         "babel-loader": "8.2.3",
         "babel-plugin-jsx-remove-data-test-id": "3.0.0",
         "commitizen": "4.2.4",
