--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "eslint-plugin-testing-library": "5.5.1",
         "gh-pages": "4.0.0",
         "jest": "27.5.1",
+        "jest-environment-jsdom": "^28.1.3",
         "node-sass": "7.0.1",
         "prettier": "2.7.1",
         "prop-types": "15.8.1",
